--- a/accent.scss
+++ b/accent.scss
@@ -3,5 +3,5 @@
    ========================================================================== */
 
 
-$highlightcolor : #CC0000;
-$lowlightcolor  : #000; 
+$highlightcolor : #287aff;
+$lowlightcolor  : #719add; 
